k8s/admin/admin-dashboard-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: admin-dashboard-basic-auth-middleware
spec:
  basicAuth:
    secret: admin-dashboard-basic-auth-user
