k8s/admin/argocd-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard-route
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.cscms.me`)
    kind: Rule
    services:
    - name: argocd-server
      kind: Service
      namespace: argocd
      port: 80
    middlewares:
      - name: admin-dashboard-basic-auth-middleware
        namespace: admin
